# galaxy

./: README.md  meson.build
Source/: BlackHole.cpp  BlackHole.h  Camera.cpp  Camera.h  FontRenderer.cpp  FontRenderer.h  GalacticGas.cpp  GalacticGas.h  Input.cpp  Input.h  SolarSystem.cpp  SolarSystem.h  Stars.cpp  Stars.h  UI.cpp  UI.h  Window.cpp  Window.h  main.cpp
Space C++/: main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
